--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 Alessio Rocchi <rocchi.b.a@gmail.com>
+Andrew Ni <niandrew7@gmail.com>
+Andrew Ni <niandrewdev@gmail.com>
 Aritra Sen <aritra.iitkgp@gmail.com>
 Aritra Sen <sena@vmware.com>
 Belmin Fernandez <belminf@users.noreply.github.com>
@@ -6,6 +8,8 @@ Bernard Cafarelli <bernard.cafarelli@gmail.com>
 Bob Webster <bwebster@vmware.com>
 Bob Webster <rdbwebster@gmail.com>
 Brandon Height <brandon.height@crc-corp.com>
+Chaminda Divitotawela <cdivitotawela@users.noreply.github.com>
+Chris Arceneaux <carcenea@gmail.com>
 Curt Kolovson <16109590+ckolovson@users.noreply.github.com>
 Curt Kolovson <ckolovson@vmware.com>
 Dana Nourie <dnourie@vmware.com>
@@ -16,12 +20,14 @@ Eli Plaut <eli@sentinelone.com>
 Fernando Porro <fernando.porro@ericsson.com>
 Frank Roth <Frank_Roth@swissre.com>
 Greg Westerfield, Jr <gwesterfieldjr@gmail.com>
+Harshneel More <30666921+harshneelmore@users.noreply.github.com>
 Jeff Blaine <jblaine@kickflop.net>
 Jeff Mace <jmace@vmware.com>
 Jiri Tyr <jiri.tyr@gmail.com>
 Kaneda-fr <sebastien@lacoste-seris.net>
 Konstantin Ilyashenko <konstantin@gigaspaces.com>
 Kostya <konstantin@gigaspaces.com>
+Michal Taratuta <MichalTaratuta@users.noreply.github.com>
 Mike <Mikhail@gigaspaces.com>
 Mykhailo Durnosvystov <Mikhail@gigaspaces.com>
 Nat Mishkin <nmishkin@vmware.com>
@@ -32,10 +38,13 @@ Paco Gómez <contact@pacogomez.com>
 Paco Gómez <contact@pacogomez.com>
 Paco Gómez <pacogomez@users.noreply.github.com>
 Pan Luo <pan.luo@ubc.ca>
+Rafal <r.przybyla@gmail.com>
 Rick van den Hof <r.hof@avisi.nl>
 Rick van den Hof <rick@vandenhof.eu>
 Robert Hodges <rhodges@vmware.com>
+SAURABH PANDEY <pandeys@vmware.com>
 Sahithi Ayloo <sahithi.ayloo@gmail.com>
+Sakthi Sundaram <sakthisunda@yahoo.com>
 Sompa Malakar <malakars@malakars-m01.vmware.com>
 Stephen Evanchik <evanchik@vmware.com>
 Suthan <suthan.venkataramana@rackspace.com>
@@ -48,14 +57,18 @@ chaitanya118 <chaitanya118@gmail.com>
 ckolovson <ckolovson@gmail.com>
 floriankammermann <florian@kammermann.me>
 francisco <contact@pacogomez.com>
+gpooja3 <44464497+gpooja3@users.noreply.github.com>
+guptaankit52 <44227612+guptaankit52@users.noreply.github.com>
+kkkothari <46557216+kkkothari@users.noreply.github.com>
 kostya13 <konstantin@gigaspaces.com>
+kousgy123 <44152564+kousgy123@users.noreply.github.com>
 lasko <lasko@nastyninja.net>
 malakars <malakars@vmware.com>
-michaltaratuta <m.taratuta@hotmail.com>
 pandeys <pandeys@vmware.com>
 rajeshk2013 <43401283+rajeshk2013@users.noreply.github.com>
 reversecipher <reversecipher@gmail.com>
 rocknes <aritra.iitkgp@gmail.com>
 sahithi <sahithi.ayloo@gmail.com>
+sakthisunda <sakthisunda@yahoo.com>
 shashim22 <43600948+shashim22@users.noreply.github.com>
 yoramw <yoram@gigaspaces.com>
